samples/_failures_safe/1761253161_384595_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0dd115a1.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_0dd115a1.c:178:9: error: expected declaration or statement at end of input
  178 |         if (op == TOKEN_PLUS) {
      |         ^~
./samples/SAFE/__tmp_0dd115a1.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0dd115a1.c:178:9: error: expected declaration or statement at end of input
